--- a/CV/Tarea.html
+++ b/CV/Tarea.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculim Vitae</title>
+    <link rel="stylesheet" href="tarea.css">
 </head>
 <body>
     <!--esto es un comentario en html-->
@@ -24,12 +25,15 @@
     <ol>
         <li>Burguer King (2016)</li>
         <li>Estacion de servicio Axion Energy (2019)</li>
-        <li>Buenbit (actualmente)</li>
+        <li class="destacado">Buenbit (actualmente)</li>
     </ol>
+    <div id="caja">
     <h2>Perfil y objetivo profesional</h2>
     <p>Como empleado en una empresa fintech, busco insertarme dentro de una organizacion para continuar aprendiendo y adoptar tareas y recursos acordes a mi trayectoria. Mi experencia en atencion al publico me habilita para cualquier trabajo que implique responsabilidad, buena presencia y trato cordial para con los clientes</p>
     
     <p>En caso de que desee contactarme, dejo adjunto mi perfil de <a
         href="https://www.linkedin.com/in/ernesto-cagliasca-a72a68237/">Linkedin</a></p>
+
+    </div>
 </body>
 </html>
